feat(ui+perms): fix dashboard permission call-center, allow admin contact CRUD, refine UI sidebar/header/form full-width & add zalo qr upload

--- a/config/locales/vi.activerecord.yml
+++ b/config/locales/vi.activerecord.yml
@@ -5,3 +5,4 @@ vi:
         taken: "đã có trong danh sách"
         required: "không thể để trống"
         blank: "không thể để trống"
+        record_invalid: "Dữ liệu không hợp lệ: %{errors}"
