feat(interactions): add appointment scheduling feature
- Add 'appointment' type to interaction_method enum
- Add scheduled_at column to interactions table
- Add calendar icon to interaction form with datetime picker (toggles on selection)
- Sync scheduled appointment to contact.next_appointment
- Display scheduled datetime in timeline with purple badge
- Add Stimulus controller for form interactivity
- Add Vietnamese translation for 'Lịch hẹn'

This allows Sales to schedule appointments directly from the Interaction form,
which will automatically appear in 'Lịch hẹn sắp tới' panel on Dashboard.

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -74,6 +74,7 @@ vi:
       zalo: "Zalo"
       email: "Email"
       meeting: "Gặp mặt"
+      appointment: "Lịch hẹn"
   # Custom Confirm Dialog
   confirm_dialog:
     title: "Xác nhận"
