feat(sprint-6): Smart Routing v2 + Province foundation
TASK-060: Remove smart routing config from ServiceType
- Remove max_pick_per_day, pick_cooldown_minutes, use_smart_routing, visibility_expand_minutes
- Update PickEligibilityService to use UserServiceTypeLimit + ENV
- Update SmartRoutingService to use ENV variables
- Update SmartRoutingExpandJob to use ENV

TASK-061/062: Database foundations
- Create provinces table (63 Vietnamese provinces)
- Create province_regions join table (many-to-many)
- Create user_service_type_limits for per-user limits

TASK-063/068: Province management
- Province CRUD controller with filtering/toggle_active
- Province views (index, new, edit, form)
- Add province_id, address to contacts table
- Update Contact model with belongs_to :province

TASK-071: Call center form updates
- Add Province dropdown to contact form
- Add Address field

TASK-065/067: ENV configuration
- PICK_COOLDOWN_MINUTES (default: 5)
- VISIBILITY_EXPAND_MINUTES (default: 2)

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -147,6 +147,22 @@ vi:
       active: "Hoạt động"
       users_count: "Số nhân viên"
       teams_count: "Số team"
+  # TASK-061: Province management translations
+  provinces:
+    title: "Quản lý Tỉnh/Thành"
+    new: "Thêm tỉnh/thành"
+    edit: "Sửa tỉnh/thành"
+    created: "Tỉnh/thành đã được tạo thành công."
+    updated: "Tỉnh/thành đã được cập nhật."
+    deleted: "Tỉnh/thành đã được xóa."
+    cannot_delete: "Không thể xóa tỉnh/thành đang có khách hàng."
+    status_updated: "Trạng thái tỉnh/thành đã được cập nhật."
+    fields:
+      name: "Tên tỉnh/thành"
+      code: "Mã"
+      position: "Thứ tự"
+      active: "Hoạt động"
+      regions: "Vùng miền"
   profiles:
     title: "Hồ sơ cá nhân"
     account_settings: "Cài đặt tài khoản"
