TASK-RBAC: Add Permissions CRUD with active/inactive toggle
- Created PermissionsController with CRUD + toggle_active actions
- Added active boolean column to permissions table (default: true)
- Redesigned permissions index with category separators and toggle switch
- Updated Permission model with active scope (Ability only loads active permissions)
- Added permissions link to sidebar in Admin section
- Updated admin/settings page to full width layout
- Added Vietnamese translations for permissions
- Added permissions CRUD permissions to seeds

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -24,6 +24,15 @@ vi:
       system_role_error: "Không thể xóa system role."
     clone:
       success: "Vai trò đã được sao chép. Vui lòng đổi tên và cấu hình quyền."
+  # TASK-RBAC: Permissions management translations
+  permissions:
+    create:
+      success: "Permission đã được tạo thành công."
+    update:
+      success: "Permission đã được cập nhật."
+    destroy:
+      success: "Permission đã được xóa."
+      in_use_error: "Không thể xóa vì đang được %{count} vai trò sử dụng."
   # TASK-019: Contact translations
   contacts:
     status:
